# sherpa-ncnn

./: CMakeLists.txt
cmake/: ncnn.cmake
wasm-examples/: .gitignore  CMakeLists.txt  README.md  index.html  serve.py  wasm.cc
